fix header sizes on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -92,14 +92,6 @@ a {
 	color: #4299CE;
 }
 
-.accelimages{
-	width:350px;
-	float:left;	
-	font-size:18px;
-	height:auto;
-	color:#5d5d5c;
-}
-
 a:hover {
 	text-decoration: underline;
 }
@@ -111,7 +103,6 @@ a:hover {
 .jumbotron h1 {
    font-family: "Fjalla One", sans-serif;
     text-transform: uppercase;
-    font-size: 80px;
     line-height: 1.5;
     text-align: center;
     color: #00AEEF;
@@ -119,10 +110,19 @@ a:hover {
 
 .jumbotron h2 {
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     text-transform: uppercase;
     font-family: "Montserrat", sans-serif;
     color: #666;
+}
+
+@media screen and (min-width: 768px) {
+    .jumbotron h1 {
+        font-size: 80px;
+    }
+    .jumbotron h2 {
+        font-size: 	30px;
+    }
 }
 
 h1{
@@ -136,14 +136,13 @@ h1{
 }
 
 h2{
-	font-size:28px;
 	color:#00AEEF;
-	font-weight:700;
+	font-weight:normal;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
 
-h3.ribbon{
+h3{
 	font-size:30px;
 	color:#fff;
 	font-weight:normal;
@@ -151,7 +150,6 @@ h3.ribbon{
 	height:61px;
 	padding-top:3px;
 	line-height: 43px;
-	background:url(../images/heading.png) center -2px no-repeat;
 }
 
 h4 {
